2006-02-28  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ advanced-notation, global: more (final)
	docs for music expressions, removed special fermatas.

2006-02-27  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ basic-notation, global: minor changes
	from mailist.

2006-02-26  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/framework-ps.scm: 	
	* scm/lily-library.scm (nan?, inf?): Move guile 1.6 compatibility
	layer for inf? and nan? from framework-ps to lily-library.

2006-02-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile ($(outdir)/emmentaler-$(1).otf
	$(outdir)/emmentaler-$(1).svg): remove backslashes from define endef.

	* buildscripts/substitute-encoding.py (Module): remove file.

	* mf/GNUmakefile: more PFA strippage.

	* mf/aybabtu.pe.in (i): remove PFAaybabtu generation

	* buildscripts/gen-emmentaler-scripts.py (i): remove PFAemmentaler
	generation

	* scm/framework-ps.scm: remove font name munging.

	* Documentation/topdocs/INSTALL.texi (Top): bump GS requirement.

2006-02-25  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/markup.scm (define-markup-command): change
	def-markup-command to define-markup-command

	* scm/music-functions.scm (define-music-function): change
	def-music-function to define-music-function.

	* python/convertrules.py (conv): rules for def-music-function
	and def-markup-commands

	* Documentation/user/programming-interface.itely,
	input/no-notation/display-lily-tests.ly,
	input/regression/lily-in-scheme.ly,
	input/regression/markup-user.ly,
	input/regression/music-function.ly, input/regression/tie-chord.ly,
	scm/fret-diagrams.scm, ly/music-functions-init.ly,
	ly/gregorian-init.ly: use new macro names (define-music-function,
	define-markup-command).

2006-02-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (main): write Makefile dependencies file. 
	(output): add comments to lp-book latex output.

	* GNUmakefile.in (footifymail): use gmane address for webpage bug